; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_CompleteFilename.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Field_CompleteFilename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@matchCount = common dso_local global i64 0, align 8
@shortestMatch = common dso_local global i64* null, align 8
@FindMatches = common dso_local global i32 0, align 4
@PrintMatches = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Field_CompleteFilename(i8* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i64 0, i64* @matchCount, align 8
  %9 = load i64*, i64** @shortestMatch, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  store i64 0, i64* %10, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @FindMatches, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @FS_FilenameCompletion(i8* %11, i8* %12, i32 %13, i32 %14, i32 %15)
  %17 = call i32 (...) @Field_Complete()
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %26, label %19

19:                                               ; preds = %4
  %20 = load i8*, i8** %5, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* @PrintMatches, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @FS_FilenameCompletion(i8* %20, i8* %21, i32 %22, i32 %23, i32 %24)
  br label %26

26:                                               ; preds = %19, %4
  ret void
}

declare dso_local i32 @FS_FilenameCompletion(i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @Field_Complete(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
